tests/ui/opt_opt_nonpositional.stderr
error: proc-macro derive panicked
  --> $DIR/opt_opt_nonpositional.rs:11:10
   |
11 | #[derive(StructOpt, Debug)]
   |          ^^^^^^^^^
   |
   = help: message: Option<Option<T>> type is meaningless for positional argument
